--- a/src/app/main/contract/batch-contract/infor-contract-batch/infor-contract-batch.component.html
+++ b/src/app/main/contract/batch-contract/infor-contract-batch/infor-contract-batch.component.html
@@ -7,7 +7,7 @@
         <div>
           <p-dropdown panelStyleClass="font" [options]="typeListForm" [(ngModel)]="idContractTemplate" 
             optionLabel="name" optionValue="id" placeholder="{{'choose.template.contract' | translate}}" [filter]="true" filterBy="name"
-            (onChange)="onChangeForm($event)">
+            (onChange)="onChangeForm($event, true)">
           </p-dropdown>
         </div>
       </div>
@@ -26,7 +26,7 @@
         <div class="form-group">
           <div class="label_item">{{'contract-type.ceca' | translate}}</div>
             <p-dropdown panelStyleClass="font" [options]="optionsCeCa" [(ngModel)]="optionsCeCaValue" optionLabel="name"
-              optionValue="id" placeholder="{{'choose.contract.type' | translate}}" [showClear]="true">
+              optionValue="id" [showClear]="true">
             </p-dropdown>
         </div>
       </div>
