--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -39,12 +39,12 @@
     </div>
   </div>
 
+  <!--Số hợp đồng-->
   <div class="row">
     <div class="col-md-5">
       <div class="form-group">
         <div class="label_item">{{'contract.number' | translate}}</div>
         <div class="input-group">
-          <!-- oninput="this.value = this.value.replace(/[^a-zA-Z0-9!@#$&()-`.+,_]/g ,'', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" -->
           <input type="text" [(ngModel)]="contract_no" maxlength="100" class="input_text" />
         </div>
       </div>
