--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -1,5 +1,7 @@
 <div class="row col-md-12">
   <div class="col-md-5" style="display: flex; flex-direction: column">
+
+    <!--Mẫu hợp đồng-->
     <div class="form-group">
       <div class="label_item">{{'menu.contract.template.list' | translate}} <span class="require_star">*</span></div>
       <div [style.background]="action == 'edit' ? '#ddd' : ''">
@@ -71,7 +73,7 @@
     <div class="form-group">
       <div class="label_item">{{'contract.type' | translate}}</div>
       <div>
-        <p-dropdown (onChange)="changeTypeContract()" panelStyleClass="font" [options]="typeList" [(ngModel)]="datasForm.type_id" optionLabel="name"
+        <p-dropdown (onChange)="changeTypeContract($event)" panelStyleClass="font" [options]="typeList" [(ngModel)]="datasForm.type_id" optionLabel="name"
           optionValue="id" placeholder="{{'choose.contract.type' | translate}}" [filter]="true" filterBy="name" [showClear]="true"
           ></p-dropdown>
       </div>
