--- a/src/app/main/customer/customer-detail/customer-detail.component.html
+++ b/src/app/main/customer/customer-detail/customer-detail.component.html
@@ -19,7 +19,7 @@
                                 </div>
                                 <div class="input-data">
                                     <img src="assets/img/icon_name.svg" class="input-img">
-                                    <input type="text" placeholder="{{'nhap_ho_va_ten' | translate}}" readonly>
+                                    <input type="text" value="{{this.name}}" readonly>
                                 </div>
                             </div>
 
@@ -28,7 +28,7 @@
                                 </div>
                                 <div class="input-data">
                                     <img src="assets/img/login_email.svg" class="input-img">
-                                    <input type="text" placeholder="{{'nhap_email' | translate}}" readonly>
+                                    <input type="text" value="{{this.email}}" readonly>
                                 </div>
                             </div>
                         </div>
@@ -38,7 +38,7 @@
                                 <div class="label_detail text-color">{{'user.sign-type' | translate}}:&nbsp;
                                 </div>
                                 <div class="input-data">
-                                    <input type="text" readonly>
+                                    <input type="text" value="{{this.signType}}" readonly>
                                 </div>
                             </div>
                             <div class="participants__name">
@@ -46,15 +46,10 @@
                                 </div>
                                 <div class="input-data">
                                     <img class="input-img">
-                                    <input type="text" placeholder="{{'nhap_sdt' | translate}}" readonly/>
+                                    <input type="text" value="{{this.phone}}" readonly/>
                                 </div>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="col-md-1 delete-element">
-                        <img src="assets/img/border_close.svg" alt="close.vn">
-                        <img class="close-btn" src="assets/img/x_close.svg" alt="close.vn">
                     </div>
                 </div>
             </div>
@@ -90,10 +85,11 @@
             <!--nguoi dieu phoi-->
             <div class="participants-border">
                 <div class="label">{{'user.lead' | translate}}</div>
-                <div class="participants--content">
-                    <input [id]="'ordering-sign-'" class="col-md-1 contract-total" style="width: 25px; height: 25px"
-                    type="number" [disabled]="1"
-                    oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" readonly>
+                <div *ngFor="let d of this.getCoordinatorHandler()" class="participants--content">
+                    <input [id]="'ordering-sign-'" class="col-md-1 contract-total"
+                    style="width: 25px; height: 25px"
+                    [disabled]="1" value="{{d.ordering}}"
+                     />
                     <div class="col-md-10 participants__content--input">
                         <div class="participants--input" style="display: flex">
                             <div class="participants__name">
@@ -101,7 +97,7 @@
                                         class="required-title">:</span></div>
                                 <div class="input-data">
                                     <img src="assets/img/icon_name.svg" class="input-img">
-                                    <input type="text" value="123" readonly>
+                                    <input type="text" value="{{d.name}}" readonly>
                                 </div>
                             </div>
 
@@ -111,7 +107,7 @@
                                 </div>
                                 <div class="input-data">
                                     <img src="assets/img/login_email.svg" class="input-img">
-                                    <input type="text" readonly>
+                                    <input type="text" value="{{d.email}}" readonly>
                                 </div>
                             </div>
                         </div>
@@ -122,7 +118,7 @@
                                 </div>
                                 <div class="input-data">
                                     <img class="input-img" style="padding: 0">
-                                    <input type="text" readonly/>
+                                    <input type="text" value="{{d.phone}}" readonly/>
                                 </div>
                             </div>
                         </div>
@@ -133,10 +129,11 @@
             <!--nguoi xem xet-->
             <div class="participants-border">
                 <div class="label">{{'user.view' | translate}}</div>
-                <div class="participants--content">
-                    <input [id]="'ordering-sign-'" class="col-md-1 contract-total" style="width: 25px; height: 25px"
-                        type="number" [disabled]="1"
-                        oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" readonly>
+                <div *ngFor="let d of this.getReviewerHandler()" class="participants--content">
+                    <input [id]="'ordering-sign-'" class="col-md-1 contract-total"
+                    style="width: 25px; height: 25px"
+                    [disabled]="1" value="{{d.ordering}}"
+                     />
                     <div class="col-md-10 participants__content--input">
                         <div class="participants--input" style="display: flex">
                             <div class="participants__name">
@@ -144,7 +141,7 @@
                                 </div>
                                 <div class="input-data">
                                     <img src="assets/img/icon_name.svg" class="input-img">
-                                    <input type="text" readonly>
+                                    <input type="text" value="{{d.name}}" readonly>
                                 </div>
                             </div>
 
@@ -153,7 +150,7 @@
                                 </div>
                                 <div class="input-data">
                                     <img src="assets/img/login_email.svg" class="input-img">
-                                    <input type="text" readonly>
+                                    <input type="text" value="{{d.email}}" readonly>
                                 </div>
                             </div>
                         </div>
@@ -164,7 +161,7 @@
                                 </div>
                                 <div class="input-data">
                                     <img class="input-img">
-                                    <input type="text" readonly/>
+                                    <input type="text" value="{{d.phone}}" readonly/>
                                 </div>
                             </div>
                         </div>
@@ -175,10 +172,11 @@
             <!--ngươi ky-->
             <div class="participants-border">
                 <div class="label">{{'user.sign' | translate}}</div>
-                <div class="participants--content">
-                    <input [id]="'ordering-sign-'" class="col-md-1 contract-total" style="width: 25px; height: 25px"
-                        type="number" [disabled]="1"
-                        oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" readonly>
+                <div *ngFor="let d of this.getSignerHandler()" class="participants--content">
+                        <input [id]="'ordering-sign-'" class="col-md-1 contract-total"
+                        style="width: 25px; height: 25px"
+                        [disabled]="1" value="{{d.ordering}}"
+                         />
                     <div class="col-md-10 participants__content--input">
                         <div class="participants--input" style="display: flex">
                             <div class="participants__name">
@@ -186,7 +184,7 @@
                                 </div>
                                 <div class="input-data">
                                     <img src="assets/img/icon_name.svg" class="input-img">
-                                    <input type="text" readonly>
+                                    <input type="text" value="{{d.name}}" readonly>
                                 </div>
                             </div>
 
@@ -195,7 +193,7 @@
                                 </div>
                                 <div class="input-data">
                                     <img src="assets/img/login_email.svg" class="input-img">
-                                    <input type="text" readonly>
+                                    <input type="text" value="{{d.email}}" readonly>
                                 </div>
                             </div>
                         </div>
@@ -205,7 +203,7 @@
                                 <div class="label_detail text-color">{{'user.sign-type' | translate}}:&nbsp;
                                 </div>
                                 <div class="input-data">
-                                    <input type="text" readonly>
+                                    <input type="text" value="{{d.signType}}" readonly>
                                 </div>
                             </div>
                             <div class="participants__name">
@@ -213,7 +211,7 @@
                                 </div>
                                 <div class="input-data">
                                     <img class="input-img">
-                                    <input type="text" readonly/>
+                                    <input type="text" value="{{d.phone}}" readonly/>
                                 </div>
                             </div>
                         </div>
@@ -224,10 +222,11 @@
             <!--van thu-->
             <div class="participants-border">
                 <div class="label">{{'user.doc' | translate}}</div>
-                <div class="participants--content">
-                    <input [id]="'ordering-sign-'" class="col-md-1 contract-total" style="width: 25px; height: 25px"
-                        type="number" [disabled]="1"
-                        oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                <div *ngFor="let d of this.getArchiverHandler()" class="participants--content">
+                    <input [id]="'ordering-sign-'" class="col-md-1 contract-total"
+                    style="width: 25px; height: 25px"
+                    [disabled]="1" value="{{d.ordering}}"
+                     />
                     <div class="col-md-10 participants__content--input">
                         <div class="participants--input" style="display: flex">
                             <div class="participants__name">
@@ -235,7 +234,7 @@
                                 </div>
                                 <div class="input-data">
                                     <img src="assets/img/icon_name.svg" class="input-img">
-                                    <input type="text" readonly>
+                                    <input type="text" value="{{d.name}}" readonly>
                                 </div>
                             </div>
 
@@ -244,7 +243,7 @@
                                 </div>
                                 <div class="input-data">
                                     <img src="assets/img/login_email.svg" class="input-img">
-                                    <input type="text" readonly>
+                                    <input type="text" value="{{d.email}}" readonly>
                                 </div>
                             </div>
                         </div>
@@ -254,7 +253,7 @@
                                 <div class="label_detail text-color">{{'user.sign-type' | translate}}:&nbsp;
                                 </div>
                                 <div class="input-data">
-                                    <input type="text" readonly>
+                                    <input type="text" value="{{d.signType}}" readonly>
                                 </div>
                             </div>
                             <div class="participants__name">
@@ -262,7 +261,7 @@
                                 </div>
                                 <div class="input-data">
                                     <img class="input-img">
-                                    <input type="text" readonly/>
+                                    <input type="text" value="{{d.phone}}" readonly/>
                                 </div>
                             </div>
                         </div>
