--- a/src/app/main/customer/customer-detail/customer-detail.component.scss
+++ b/src/app/main/customer/customer-detail/customer-detail.component.scss
@@ -34,6 +34,7 @@
         }
     }
 
+
     .contract__content--title-doi-tac {
         // display: flex;
         color: #106DB6;
@@ -299,4 +300,12 @@
   padding-left: 10px;
   outline: 0;
   font-size: 14px;
+}
+
+.contract-total {
+  border: 1px solid #106DB6;
+  color: #106DB6;
+  text-align: center;
+  border-radius: 5px;
+  outline: none;
 }
