--- a/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
+++ b/src/app/main/contract-signature/shared/model/forward-contract/forward-contract.component.html
@@ -43,25 +43,25 @@
         </div>
 
         <div class="input-data" style="width: 13%;">
-          <div ngbDropdown class="d-inline-block ng-untouched ng-pristine ng-valid dropdown" style="margin-left: 6px;" [(ngModel)]="locale">
+          <div ngbDropdown class="d-inline-block ng-untouched ng-pristine ng-valid dropdown" style="margin-left: 6px;" [(ngModel)]="this.locale">
             <div *ngIf="this.locale =='vi'">
-              <button *ngIf="this.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam" id="dropdownMenu1"
-                ngbDropdownToggle>{{dropdownButtonText}}</button>
+              <div *ngIf="this.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam" id="dropdownMenu1"
+                ngbDropdownToggle>{{dropdownButtonText}}</div>
             </div>
             <div *ngIf="this.locale =='en'">
-              <button *ngIf="this.locale =='en'" class="btn btn-outline-primary db_icon_english" id="dropdownMenu1"
-                ngbDropdownToggle>{{dropdownButtonText}}</button>
+              <div *ngIf="this.locale =='en'" class="btn btn-outline-primary db_icon_english" id="dropdownMenu1"
+                ngbDropdownToggle>{{dropdownButtonText}}</div>
             </div>
             <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
               <div class="switch-language">
-                <button class="db_icon_vietnam" ngbDropdownItem (click)="this.locale = 'vi'">
+                <div class="db_icon_vietnam" ngbDropdownItem (click)="this.locale = 'vi'">
                   <div class="language">{{ "vie" | translate }}</div>
-                </button>
+                </div>
               </div>
               <div class="switch-language">
-                <button class="db_icon_english" ngbDropdownItem (click)="this.locale = 'en'">
+                <div class="db_icon_english" ngbDropdownItem (click)="this.locale = 'en'">
                   <div class="language">{{ "eng" | translate }}</div>
-                </button>
+                </div>
               </div>
             </div>
           </div>
@@ -81,23 +81,23 @@
         <div class="input-data" style="width: 13%;">
           <div ngbDropdown class="d-inline-block ng-untouched ng-pristine ng-valid dropdown" style="margin-left: 6px;" [(ngModel)]="this.locale">
             <div *ngIf="this.locale =='vi'">
-              <button *ngIf="this.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam" id="dropdownMenu1"
-                ngbDropdownToggle>{{dropdownButtonText}}</button>
+              <div *ngIf="this.locale =='vi'" class="btn btn-outline-primary db_icon_vietnam" id="dropdownMenu1"
+                ngbDropdownToggle></div>
             </div>
             <div *ngIf="this.locale =='en'">
-              <button *ngIf="this.locale =='en'" class="btn btn-outline-primary db_icon_english" id="dropdownMenu1"
-                ngbDropdownToggle>{{dropdownButtonText}}</button>
+              <div *ngIf="this.locale =='en'" class="btn btn-outline-primary db_icon_english" id="dropdownMenu1"
+                ngbDropdownToggle></div>
             </div>
             <div ngbDropdownMenu aria-labelledby="dropdownMenu1" style="min-width: 6rem;">
               <div class="switch-language">
-                <button class="db_icon_vietnam" ngbDropdownItem (click)="this.locale = 'vi'">
+                <div class="db_icon_vietnam" ngbDropdownItem (click)="this.locale = 'vi'">
                   <div class="language">{{ "vie" | translate }}</div>
-                </button>
+                </div>
               </div>
               <div class="switch-language">
-                <button class="db_icon_english" ngbDropdownItem (click)="this.locale = 'en'">
+                <div class="db_icon_english" ngbDropdownItem (click)="this.locale = 'en'">
                   <div class="language">{{ "eng" | translate }}</div>
-                </button>
+                </div>
               </div>
             </div>
           </div>
