--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -74,8 +74,12 @@
 
                 <!--Cột 3: Ngày hết hạn ký-->
                 <div class="col-md-2 calendar_deadline">
-                    <div><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.sign_time | date:
-                            'dd/MM/yyyy'}}</span></div>
+                    <div style="display: flex; justify-content: center;">
+                        <div class="div_icon"><i class="fa fa-calendar fa_icon"></i><span class="item_date">{{item.sign_time | date:
+                                'dd/MM/yyyy'}}</span></div>
+                        <div class="div_icon"><img src="../../assets/img/icon_edit.svg" class="img_icon" ngbTooltip="{{'contract.edit' | translate}}" (click)="openEditExpiration(item.sign_time)" />
+                        </div>
+                    </div>
                 </div>
 
                 <!--Cột 4: Thao tác-->
