--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -112,10 +112,10 @@
         <div class="row">
           <div class="col-md-12">
             <div *ngIf="totalCreate == 0"
-              style="height:470px;display: table;top: 0;left: 0;width: 100%;text-align: center;">
+              style="height:500px;display: table;top: 0;left: 0;width: 100%;text-align: center;">
               <div style="display: table-cell;vertical-align: middle;">
                 <img src="../../../assets/img/empty_data.svg"/>
-                <div style="color: #94A7C6">{{'no.data' | translate}}</div>
+                <div style="color: #94A7C6;">{{'no.data' | translate}}</div>
               </div>
             </div>
             <div *ngIf="totalCreate > 0" >
