--- a/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
+++ b/src/app/main/contract-signature/display-digital-signature/display-digital-signature.component.html
@@ -1,6 +1,6 @@
 <div class="signature-container" id="export-html" style="width: 155px;min-height: 80px; display: flex; font-size: 9px;">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
-    <div class="signature-content" style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+    <div class="signature-content" style="color: #6cc449; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
         <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
         <div style="z-index: 2;text-align: left;">{{'sign.day' | translate }}: {{isDateTime | date: 'dd/MM/YYYY HH:mm:ss'}}</div>
@@ -9,7 +9,7 @@
 
 <div class="signature-container" id="export-html2" style="width: 155px;min-height: 80px; display: flex; font-size: 9px; background-color: white;">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
-    <div class="signature-content" style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+    <div class="signature-content" style="color: #6cc449; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
         <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
         <div style="z-index: 2;text-align: left;">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm:ss'}}</div>
@@ -21,7 +21,7 @@
     <div style="position: relative;">
         <img [src]="this.srcMark" style="width: 70%; height: 100%;z-index: 1;object-fit: contain;">
     </div>
-    <div class="signature-content" style="color: #4FC123; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
+    <div class="signature-content" style="color: #6cc449; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
         <div style="width: 165px;">
             <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
             <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
@@ -37,7 +37,7 @@
     <div style="position: relative;">
         <img [src]="this.srcMark" style="width: 70%; height: 100%;z-index: 1;object-fit: contain">
     </div>
-    <div class="signature-content" style="color: #4FC123; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
+    <div class="signature-content" style="color: #6cc449; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
         <div style="width: 165px;">
             <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{ 'sign_by_token'| translate}}</div>
             <div style="z-index: 2;text-align: left;">{{'sign.by' | translate}}: {{nameCompany}}</div>
@@ -48,7 +48,7 @@
 
 <div class="signature-container" id="export-html-ekyc" style="width: 155px;min-height: 80px; display: flex; font-size: 9px">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
-    <div class="signature-content" style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+    <div class="signature-content" style="color: #6cc449; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{'sign.eKYC' | translate}}</div>
         <div style="z-index: 2;text-align: left;">{{'user.sign' | translate}}: {{nameCompany}}</div>
         <div style="z-index: 2;text-align: left;">{{'verified.cardid' | translate}}: {{cardId}}</div>
@@ -58,7 +58,7 @@
 
 <div class="signature-container" id="export-html-hsm1" style="min-height: 80px;display: flex; font-size: 9px">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
-    <div style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+    <div style="color: #6cc449; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</span>
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'tax_code' | translate}}: {{cardId}}</span>
         <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'sign.day' | translate}}: {{isDateTime | date: 'dd/MM/YYYY HH:mm:ss'}}</span>
@@ -68,7 +68,7 @@
 <!--Ký CTS ko có con dấu-->
 <div class="signature-container" id="export-html-cert" style="min-height: 80px;display: flex; font-size: 9px">
   <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
-  <div style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+  <div style="color: #6cc449; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
       <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign_by_cert' | translate}}</span>
       <!-- <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'signer' | translate}}: {{nameCompany}}</span> -->
       <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'tax_code' | translate}}: {{cardId}}</span>
@@ -83,7 +83,7 @@
     <div style="position: relative;">
         <img [src]='this.srcMark' style="width: 70%; height: 100%;z-index: 1; object-fit: contain">
     </div>
-    <div class="signature-content" style="color: #4FC123; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
+    <div class="signature-content" style="color: #6cc449; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
         <div style="width: 165px;">
             <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{'sign_by_hsm' | translate}}</div>
             <div style="z-index: 2;text-align: left;">{{'tax_code' | translate}}: {{cardId}}</div>
@@ -97,7 +97,7 @@
   <div style="position: relative;">
       <img [src]='this.srcMark' style="width: 70%; height: 100%;z-index: 1; object-fit: contain">
   </div>
-  <div class="signature-content" style="color: #4FC123; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
+  <div class="signature-content" style="color: #6cc449; background-size: 40px 40px; display: flex; justify-content: space-between;align-items: center; width: 100%;">
       <div style="width: 165px;">
           <div style="z-index: 2;text-align: left;">{{'user.sign-type' | translate}}: {{'sign_by_cert' | translate}}</div>
           <div style="z-index: 2;text-align: left;">{{'tax_code' | translate}}: {{cardId}}</div>
@@ -108,7 +108,7 @@
 
 <div class="signature-container" id="export-html-pki" style="min-height: 80px; display: flex; font-size: 9px; background-color: white;">
     <img style="width: 30px" src="assets/img/tick_signature.svg" alt="duongdt.vn">
-    <div style="color: #4FC123; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
+    <div style="color: #6cc449; background:url('assets/img/chu_e_opacity.png') no-repeat center; background-size: 40px 40px">
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign-type' | translate}}: {{'sign.by.pki' | translate}}</span>
         <span style="text-align: left; white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.sign' | translate}}: {{nameCompany}}</span>
         <span style="text-align: left;white-space: nowrap;text-overflow: ellipsis;overflow: visible;display: inherit">{{'user.phone' | translate}}: {{phonePKI}}</span>
