--- a/src/app/main/contract-signature/display-signature-image/display-signature-image.component.html
+++ b/src/app/main/contract-signature/display-signature-image/display-signature-image.component.html
@@ -1,9 +1,9 @@
 <div class="signature-container" id="export-signature-image-html"
      style="width: 140px;min-height: 40px; font-size: 9px">
   <div class="signature-content"
-       style="margin-left: 6px; color: #4FC123;line-height: 10px; background:url('assets/img/tick_signature.svg') no-repeat center; background-size: 40px 30px">
+       style="margin-left: 6px; color: #6cc449;line-height: 10px; background:url('assets/img/tick_signature.svg') no-repeat center; background-size: 40px 30px">
     <div style="z-index: 2; text-align: left;">Loại ký: {{'sign.image.otp' | translate}}</div>
     <div style="z-index: 2; text-align: left;">{{'user.sign' | translate}}: {{userOtp}} đã xác thực qua SĐT {{phoneOtp}}</div>
-    <div style="z-index: 2; text-align: left;">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm'}}</div>
+    <div style="z-index: 2; text-align: left;">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm:ss'}}</div>
   </div>
 </div>
