--- a/src/app/main/contract-signature/display-signature-image/display-signature-image.component.html
+++ b/src/app/main/contract-signature/display-signature-image/display-signature-image.component.html
@@ -3,7 +3,7 @@
   <div class="signature-content"
        style="margin-left: 6px; color: #6cc449;line-height: 10px; background:url('assets/img/tick_signature.svg') no-repeat center; background-size: 40px 30px">
     <div style="z-index: 2; text-align: left;">Loại ký: {{'sign.image.otp' | translate}}</div>
-    <div style="z-index: 2; text-align: left;">{{'user.sign' | translate}}: {{userOtp}} đã xác thực qua SĐT {{phoneOtp}}</div>
-    <div style="z-index: 2; text-align: left;">Ngày ký: {{isDateTime | date: 'dd/MM/YYYY HH:mm:ss'}}</div>
+    <div style="z-index: 2; text-align: left;">{{'user.sign' | translate}}: Phạm Thị Diệu Phương đã xác thực qua SĐT 0909166952</div>
+    <div style="z-index: 2; text-align: left;">Ngày ký: 24/07/2023 11:33:17</div>
   </div>
 </div>
